src/objects/Accueil_del__c.object
<CustomObject>
    <description>Formulaire de suivi pour accueil de nouveaux employé(e)</description>
    <fields>
        <fullName>Acces_au_batiment__c</fullName>
        <label>Accès au bâtiment régional</label>
        <picklist>
            <picklistValues>
                <fullName>Clefs remises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Système d&apos;alarme informé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code d&apos;accès donné</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Acces_calendrier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accès calendriers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adresse_personnelle__c</fullName>
        <inlineHelpText>entrer toute l&apos;addresse personnelle dans le format
adresse rue 
Ville Province 
Pays Code Postal</inlineHelpText>
        <label>Adresse personnelle</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assurance_sociale__c</fullName>
        <label>Assurance sociale</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CV_CEP_en__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>joindre fichier en pièce attachée</inlineHelpText>
        <label>CV CEP En</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_CEP_fr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>joindre document en pièce attachée</inlineHelpText>
        <label>CV CEP fr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendrier_accueil_compl_t__c</fullName>
        <defaultValue>false</defaultValue>
        <description>coché une fois que les rendez vous ont été pris , confirmé et que le calendrier est bien en place</description>
        <label>Calendrier d&apos;accueil complété</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacite_annuelle__c</fullName>
        <description>Nombre d&apos;heures disponibles dans une année ( 52*35) dont on soustrait les congés fériés (11) et les vacances annuelles ( 10-15-20-25 jours).</description>
        <formula>(52*35)-(vacances_allouees__c *7)-77</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacité annuelle (hres)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cellulaire__c</fullName>
        <label>Cellulaire fourni</label>
        <picklist>
            <picklistValues>
                <fullName>oui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>non</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cellulaire_couleur__c</fullName>
        <label>Cellulaire couleur</label>
        <picklist>
            <picklistValues>
                <fullName>Argent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gris cosmique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Or</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code_Banque_2__c</fullName>
        <label>Code Banque 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_banque__c</fullName>
        <label>Code banque</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compagnie__c</fullName>
        <label>Compagnie</label>
        <picklist>
            <picklistValues>
                <fullName>Experts Conseils CEP inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEP Forensic Engineering inc.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comptes_TI__c</fullName>
        <label>Comptes TI</label>
        <picklist>
            <picklistValues>
                <fullName>SSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Réseau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imprimantes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Creation_contact_FM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Création contact FM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_embauche__c</fullName>
        <label>Date embauche</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_naissance__c</fullName>
        <label>Date naissance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_naissance_au_calendrier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date naissance au calendrier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demandes_sp_ciales__c</fullName>
        <description>Logiciels spéciaux tel que Windows, Acumba, logiciels techniques...</description>
        <label>Demandes spéciales</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_de_poste__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Télécharger la description de poste dans le formulaire</description>
        <inlineHelpText>Joindre le document en pièce attachée</inlineHelpText>
        <label>Description de poste</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diner_accueil_Laval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cocher la case quand le dîner s&apos;est tenu</inlineHelpText>
        <label>Dîner accueil Laval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diplomes__c</fullName>
        <label>Diplômes</label>
        <picklist>
            <picklistValues>
                <fullName>B.Eng.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bsc.A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.Sc.A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.Sc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.A.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.Ing.</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EXplications_Assurance_professionnelles__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pour les ingénieurs et autres professionnels de CEP</inlineHelpText>
        <label>Explications Assurance professionnelles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entente_confidentialit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Télécharger le document de l&apos;entente et cocher la case</inlineHelpText>
        <label>Entente confidentialité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipement_fourni__c</fullName>
        <label>Équipement fourni</label>
        <picklist>
            <picklistValues>
                <fullName>Caméra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dictaphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Habits de travail</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Experts_attitres__c</fullName>
        <description>Dans le cas d&apos;une adjointe administrative seulement.</description>
        <inlineHelpText>Indiquer sur des lignes séparées les prénoms et noms des experts assignés à l&apos;adjointe</inlineHelpText>
        <label>Experts attitrés</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Explications_Assurances__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Assurance Groupe</inlineHelpText>
        <label>Explications Assurances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Folio_bancaire_2__c</fullName>
        <label>Folio bancaire 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fonctions__c</fullName>
        <label>Fonctions</label>
        <picklist>
            <picklistValues>
                <fullName>Adjointe administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjointe au directeur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjointes au Directeur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agente administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chef de groupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chef RH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chef TI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinatrice communications, ventes et marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directeur régional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directrice administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert niveau 1A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert niveau 1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert niveau 2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert niveau 2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert niveau 3A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert niveau 3B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert Niveau 4A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert niveau 4B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secrétaire-Réceptioniste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technicien de laboratoire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tecnicien comptable</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forfait_cellulaire_choisi__c</fullName>
        <description>des frais supplémentaires seront chargés pour un appareil avec plus de 16Gb</description>
        <label>Cellulaire mémoire (Gb)</label>
        <picklist>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formation_Politiques_et_proc_dures__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>cliquer la case une fois la formation donnée et l&apos;acquisition de la compréhension valider par le (la) responsable.</inlineHelpText>
        <label>Formation politiques et procédures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formation_camera_et_logiciels__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Généralement cette formation est donnée par l&apos;infographe</description>
        <inlineHelpText>cliquer la case une fois la formation donnée et l&apos;acquisition de la compétence validée par le (la) responsable</inlineHelpText>
        <label>Formation  caméra  et logiciels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formation_gestion_dossiers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Généralement cette formation est donnée par M Martineau lors de la visite au bureau de Laval</description>
        <inlineHelpText>chiquer la case une fois la formation donnée et l&apos;acquisition de la compétence validée par le (la) responsable</inlineHelpText>
        <label>Formation  processus gestion dossier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formation_informatique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formation informatique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Apps__c</fullName>
        <defaultValue>&quot;https://www.youtube.com/user/AnsonA4&quot;</defaultValue>
        <description>https://www.youtube.com/user/AnsonA4</description>
        <inlineHelpText>https://www.youtube.com/user/AnsonA4</inlineHelpText>
        <label>Google Apps</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Groupe__c</fullName>
        <label>Groupe</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biomécanique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Électricité</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incendies et explosions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matériaux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mécanique bâtiment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mécanique générale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Véhicules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconstruction d&apos;accidents</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Initiales__c</fullName>
        <inlineHelpText>Si initiales déjà utilisées, prendre la 2e lettre du nom de famille (ex. SLA pour Stéphane Labonté) ou bien la lettre du 2e prénom (ex. SFL pour Sébastien Frédéric Landry).</inlineHelpText>
        <label>Initiales</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Institution_bancaire_2__c</fullName>
        <label>Institution bancaire 2</label>
        <picklist>
            <picklistValues>
                <fullName>CIBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desjardins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laurentienne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manulife Bank of Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banque Nationale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Institution_bancaire__c</fullName>
        <label>Institution bancaire</label>
        <picklist>
            <picklistValues>
                <fullName>CIBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laurentienne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desjardins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manulife bank of Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banque Nationale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Trust</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Instructions_speciales_r_gionales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instructions spéciales régionales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intiales_CEP__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Initales CEP</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>CEP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Formulaire_Accueil</relationshipLabel>
        <relationshipName>Formulaire_Accueil</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lamination_permis_de_pratique__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Une fois remis au RH faire laminer permis pour exposer dans le bureau régional</description>
        <label>Lamination permis de pratique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Langue_preferee__c</fullName>
        <label>Langue préférée</label>
        <picklist>
            <picklistValues>
                <fullName>Français</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglais</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mise_jour_liste_telephonique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mise à jour liste téléphonique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobilier_en_place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobilier en place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Bureau__c</fullName>
        <label>No.Bureau</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Employe__c</fullName>
        <label>No. Employé</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_cellullaire__c</fullName>
        <description>numero de cellulaire attribué</description>
        <label>No cellullaire</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nom__c</fullName>
        <label>Nom</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objectifs_facturables__c</fullName>
        <formula>IF(vacances_allouees__c =15, 1330, IF(vacances_allouees__c =20, 1300, 1280) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1330 pour 15 jours de vacances 
1300 pour 20 jours de vacances 
1280 pour 25 jours de vacances</inlineHelpText>
        <label>Objectifs facturables</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parrain_technique__c</fullName>
        <label>Parrain technique</label>
        <picklist>
            <picklistValues>
                <fullName>Clément Caron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kevin Gauthier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joël Turcotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Chainé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stéphane Millette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isabelle Murray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guy Voisine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar Pilon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippe Bouchard</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Photo_officielle__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Joindre la photo en pièce attachée</inlineHelpText>
        <label>Photo officielle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_bureau_avec_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Préparer le plan des bureaux avec les photos ajout avant l&apos;arrivée du candidat</description>
        <label>Plan bureau avec Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pochette_accueil_remise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pochette accueil remise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Poste_telephonique__c</fullName>
        <inlineHelpText>200 Laval
300 Québec
400 Ottawa
500 Oshwawa</inlineHelpText>
        <label>Poste téléphonique</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prelevement_banca__c</fullName>
        <inlineHelpText>Choisir oui dans le cas où l&apos;employé exprime ou a des besoins spécifiques ( pension...) pour  des prélèvements pré-autorosés. 
Référer la personne au service de comptabilité. la paie pour la suite du processus.</inlineHelpText>
        <label>Prélèvement bancaire</label>
        <picklist>
            <picklistValues>
                <fullName>non</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Oui</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prenom_2__c</fullName>
        <inlineHelpText>Deuxième prénom à utiliser  dans le cas de conflit pour les initiales</inlineHelpText>
        <label>Prénom 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prenom__c</fullName>
        <label>Prénom</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_mission_vision_valeurs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rencontre avec le chef de la direction pour une présentation de CEP sur la mission, la vision et  les valeurs de CEP. À cette occasion il y a aussi présentation de la structure organisationnelle et la cie et un bref historique.</description>
        <inlineHelpText>Cochez la case une fois la rencontre complétée.</inlineHelpText>
        <label>Présentation mission vision valeurs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preuve_assurance_auto_affaires__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pour les experts qui se déplacent seulement
joindre une copie du formulaire de l&apos;assureur</inlineHelpText>
        <label>Preuve assurance auto affaires</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processus_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processus complété</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profil_technique__c</fullName>
        <inlineHelpText>Profil technique pour cv et site web</inlineHelpText>
        <label>Profil technique</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Profil_technique_anglais__c</fullName>
        <inlineHelpText>Profil pour site web</inlineHelpText>
        <label>Profil technique anglais</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Région</label>
        <picklist>
            <picklistValues>
                <fullName>Laval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Québec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ottawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oshawa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reseau_TI_en_place__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>coodination requise entre directeur régional et chef TI</inlineHelpText>
        <label>Réseau TI en place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salaire_annuel__c</fullName>
        <label>Salaire annuel</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sup_rieur_imm_diat__c</fullName>
        <label>Supérieur immédiat</label>
        <picklist>
            <picklistValues>
                <fullName>Chef de la direction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directeur régional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chef de groupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjointe au directeur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directrice finances et administration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Titres_Professionnels__c</fullName>
        <label>Titres Professionnels</label>
        <picklist>
            <picklistValues>
                <fullName>ing.</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Eng.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P.Eng.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Transit_succursale_bancaire_2__c</fullName>
        <label>Transit succursale bancaire 2</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transit_succursale_bancaire__c</fullName>
        <label>Transit succursale bancaire</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_ordinateurs__c</fullName>
        <label>Type ordinateurs</label>
        <picklist>
            <picklistValues>
                <fullName>IMac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vacances_1ere_ann_e__c</fullName>
        <inlineHelpText>inscrire ici le nombre de jours de vacances allouée pour le premier exercice</inlineHelpText>
        <label>Vacances 1ere année</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visite_du_bureau_regional_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visite du bureau régional complétée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>adjointe_attitree__c</fullName>
        <label>Adjointe attitrée</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>anniversaire_au_calendriercep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>anniversaire au calendrier CEP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>configuration_telephone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>configuration téléphone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cong_s_sp_ciaux__c</fullName>
        <inlineHelpText>en considération de la prise de journée sans solde avec autorisation préalable pour la première année</inlineHelpText>
        <label>congés spéciaux</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>courriel_CEP__c</fullName>
        <inlineHelpText>doit être @expcep.com</inlineHelpText>
        <label>courriel CEP</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>courriel_maison__c</fullName>
        <label>courriel maison</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cv_entrevue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>joindre le document en pièce attachée</inlineHelpText>
        <label>CV entrevue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>folio_bancaire__c</fullName>
        <label>folio bancaire</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>formation_calendrier_google__c</fullName>
        <defaultValue>&quot;https://www.youtube.com/watch?v=Wn9aqqsNJMg&amp;list=PLs7zxED4oCepGWWdvLJyaq3bRNvqHvBu5&quot;</defaultValue>
        <label>formation calendrier google</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>formation_telephone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remettre instructions téléphone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lunch_accueil__c</fullName>
        <defaultValue>false</defaultValue>
        <label>lunch accueil/welcome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>objectifs_admin__c</fullName>
        <formula>Capacite_annuelle__c - Objectifs_facturables__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Objectifs admin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>permis_de_pratique__c</fullName>
        <defaultValue>false</defaultValue>
        <description>coché une fois le permis métallisé et remis pour installltion au bureau régional approprié</description>
        <label>Permis de pratique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sceau_professionnel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>coché une fois le sceau numérisé et déposer sur le serveur</description>
        <label>sceau professionnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signature_num_ris_e__c</fullName>
        <defaultValue>false</defaultValue>
        <description>coché une fois la signature numérisé déposée sur le serveur</description>
        <label>signature numérisée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>specimen_cheque__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fournir à la comptabilité un spécimen de chèque
Provide accounting with a cheque specimen</description>
        <label>specimen chèque</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>